<resources>
    <string name="app_name">MAIDI</string>

    <!-- ************** GLOBAL VALUES *********** -->
    <string name="next">Next</string>
    <string name="login">Log In</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="submit">Submit</string>
    <string name="sync">Sync</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="enter_dob">Enter DOB</string>
    <string name="vaccine">Vaccine</string>
    <string name="date_due">Date due</string>
    <string name="blank_choose">* Select *</string>
    <string name="name">Name</string>
    <string name="dob">DoB</string>
    <string name="download">Download</string>
    <string name="update">Update</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="reg_id">Reg ID</string>
    <string name="reg_date">Reg Date</string>
    <string name="total">Total</string>
    <string name="organisation_unit">Organisation Unit</string>
    <string name="event">Event</string>
    <string name="due_date">Due date</string>
    <string name="visit_date">Visit date</string>
    <string name="data_entry">Data Entry</string>
    <string name="view">View</string>
    <string name="enroll_new_child">Enroll new child</string>
    <string name="registered_beneficaries">Registered \nbeneficaries</string>
    <string name="reject">Reject</string>

    <!-- *************** GLOBAL WARNING STRING ************* -->
    <string name="phone_number_invalid">The phone number is invalid. Please recheck and try again</string>
    <string name="phone_number_not_been_typed">You need to type your phone number to continue</string>
    <string name="form_is_empty">Form is empty, please fill at least one</string>
    <string name="write_storage_permission">Permissions need to be granted to export datas into PDF file. Please grant permissions and re-open the app</string>
    <string name="export_pdf_file_failed">Failed to export to Pdf file. Please try again</string>
    <string name="export_pdf_file_success">The PDF file was exported successfully</string>
    <string name="login_by_phone_time_out">The phone number verification period has timed out. Please try again.</string>
    <string name="verify_phone_number_success">Verify phone number success.</string>
    <string name="enroll_child_into_immunisation_program">Do you want to enroll that child on Immunization program or reject this enrollment?</string>

    <!-- ************** LOGIN SCREEN ************ -->
    <string name="login_app_title">MAIDI APP</string>
    <string name="login_username_instruction">
        Enter username for health workers. If you\'re not please enter mobile number instead
    </string>
    <string name="login_forgot_username">Forget username</string>
    <string name="login_forgot_password">Forget password</string>
    <string name="login_contact_help">Get help! Contact +9347472983</string>
    <string name="login_beneficiary">Beneficiary Login</string>

    <!-- ************** Health Worker Menu ********** -->
    <string name="child_registration">Child Registration</string>
    <string name="immunization_card">Immunisation Card</string>
    <string name="monthly_workplan">Monthly Workplan</string>
    <string name="survey">Survey</string>
    <string name="aefi">Adverse Event Following Immunization (AEFI)</string>
    <string name="iec_bcc">IEC/BCC</string>
    <string name="my_immunisation">My Immunisation</string>
    <string name="session_wise_vaccine_due">Session wise vaccine due</string>

    <!-- *************** Beneficiary Login ************ -->
    <string name="enter_phone_number">Enter your mobile number to get started!</string>
    <string name="otp_instructions">We have sent you the OTP via SMS for \nmobile number verification</string>
    <string name="didt_get_otp">Didn\'t get the OTP?</string>
    <string name="mobile">Mobile</string>

    <!--- **************** Child Registration ************* -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="social_category">Social Category</string>
    <string name="mobile_number">Mobile number</string>
    <string name="alternate_contact_number">Alternate contact number</string>
    <string name="mother_name">Mother \/ Caregiver name</string>
    <string name="father_name">Father name</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="block">Block</string>
    <string name="village_ward">Village/Ward</string>

    <!--- **************** Hints ************* -->
    <string name="login_input_username_hint">Username</string>
    <string name="login_input_password_hint">Password</string>
    <string name="session_wise_vaccination_due_hint">Select session date to proceed</string>
    <string name="view_or_update_your_workplan">View or Update your Workplan</string>
    <string name="enroll_new_child_or_view_registered_beneficaries">Enroll new child or view registered beneficaries</string>
    <string name="select_a_year_and_a_month_to_update_the_workplan">Select a year and a month to update the workplan</string>

    <!--- *************** Fragments of Main Screen's titles ************* -->
    <string name="my_immunisation_title">My Immunisation</string>
    <string name="immunisation_card_title">Immunisation Card</string>
    <string name="immunisation_card_events_title">Immunisation Card - Events</string>
    <string name="registered_beneficaries_title">Registered beneficaries</string>
    <string name="immunisation_card_create_new_title">Immunisation Card - Create New Event</string>
    <string name="immunisation_card_update_title">Immunisation Card - Update Event</string>
    <string name="session_wise_vaccination_due">Session wise Vaccination due</string>
    <string name="registered_case">Registered Cases</string>
    <string name="adverse_event_information">Adverse Event Information</string>
    <string name="surveys">Surveys</string>
    <string name="house_to_house_survey">House to house survey</string>
    <string name="monthly_workplan_update">Monthly Workplan - Update</string>
    <string name="monthly_workplan_create_new_event">Monthly Workplan - Create New Event</string>

    <!--- *************** Days of week ************* -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

</resources>
