<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61.4dp"
        android:background="@android:color/white"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:text="#"
            android:textAllCaps="true"
            android:textSize="15.4dp"
            android:textColor="@color/dark_gray"
            android:gravity="center"/>

    <TextView
            android:layout_width="154dp"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:textAllCaps="true"
            android:textSize="15.4dp"
            android:textColor="@color/dark_gray"
            android:gravity="center_vertical"
            android:singleLine="true"/>

    <TextView
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:text="@string/dob"
            android:textAllCaps="true"
            android:textSize="15.4dp"
            android:textColor="@color/dark_gray"
            android:gravity="center_vertical"/>

    <TextView
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:text="@string/reg_id"
            android:textAllCaps="true"
            android:textSize="15.4dp"
            android:textColor="@color/dark_gray"
            android:gravity="center_vertical"/>

    <LinearLayout
            android:id="@+id/fragment_session_wise_data_list_ll_vaccine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

    </LinearLayout>

</LinearLayout>