<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:paddingLeft="20dp"
              android:paddingRight="20dp"
              android:background="@android:color/white">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MAIDI"
            android:textSize="35dp"
            android:layout_marginTop="50dp"
            android:textColor="@color/dark_blue"
            fontPath="fonts/NunitoSans-Bold.ttf"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_phone_number"
            android:textColor="@color/dark_blue"
            android:textSize="13.4dp"
            fontPath="fonts/NunitoSans-Bold.ttf"
            android:layout_marginTop="82dp"
            android:gravity="center"

    />

    <View android:layout_width="match_parent" android:layout_height="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_login_input_phone_et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13.4dp"
                android:hint="@string/mobile"
                android:inputType="phone"
                android:maxLength="10"
                />

    </com.google.android.material.textfield.TextInputLayout>

    <View android:layout_width="match_parent" android:layout_height="50dp"/>

    <androidx.cardview.widget.CardView
            android:id="@+id/fragment_login_input_phone_btn_next"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="5dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/next"
                android:textColor="@android:color/white"
                android:background="@drawable/button_blue_selector"
                fontPath="fonts/NunitoSans-Bold.ttf"
        />

    </androidx.cardview.widget.CardView>

    <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

</LinearLayout>