<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="19.2dp"
            android:gravity="center"
            android:text="@string/enroll_new_child_or_view_registered_beneficaries"
            android:textColor="@color/dark_blue"
            android:textSize="13.4dp"
            fontPath="fonts/NunitoSans-Bold.ttf"
    />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="84.4dp"
            android:paddingLeft="28dp"
            android:paddingRight="28dp"
            android:gravity="center_vertical"
            android:layout_gravity="bottom">

        <androidx.cardview.widget.CardView
                android:id="@+id/fragment_child_registration_choose_cv_enroll_new_child"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                app:cardCornerRadius="4dp"
                app:cardElevation="5dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/enroll_new_child"
                    android:textColor="@android:color/white"
                    android:background="@drawable/button_blue_selector"
                    fontPath="fonts/NunitoSans-Bold.ttf"
            />

        </androidx.cardview.widget.CardView>

        <View android:layout_width="14.4dp" android:layout_height="match_parent"/>

        <androidx.cardview.widget.CardView
                android:id="@+id/fragment_child_registration_choose_cv_registered_beneficaries"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                app:cardCornerRadius="4dp"
                app:cardElevation="5dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/registered_beneficaries"
                    android:textColor="@color/dark_blue"
                    android:background="@drawable/button_white_blue_stroke_selector"
                    android:lineSpacingExtra="1.5dp"
                    fontPath="fonts/NunitoSans-Bold.ttf"
            />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>