<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.cardview.widget.CardView android:layout_width="match_parent"
                                           android:layout_height="wrap_content"
                                           app:cardElevation="6dp"
                                           app:cardBackgroundColor="@android:color/transparent"
                                           app:contentPaddingBottom="6dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="61.4dp"
                    android:background="@android:color/white"
            >

                <TextView
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:text="#"
                        android:textAllCaps="true"
                        android:textSize="15.4dp"
                        android:textColor="@color/dark_gray"
                        android:gravity="center"/>

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:text="@string/name"
                        android:textAllCaps="true"
                        android:textSize="15.4dp"
                        android:textColor="@color/dark_gray"
                        android:gravity="center_vertical"/>

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:text="@string/dob"
                        android:textAllCaps="true"
                        android:textSize="15.4dp"
                        android:textColor="@color/dark_gray"
                        android:gravity="end|center_vertical"
                        android:paddingRight="28.8dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_immunisation_card_rcv_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="61.4dp"/>

    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="28dp"
            android:layout_gravity="bottom"
            >

        <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="0.5"
                app:cardCornerRadius="4dp"
                app:cardElevation="5dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/download"
                    android:textColor="@android:color/white"
                    android:background="@drawable/button_blue_selector"
                    fontPath="fonts/NunitoSans-Bold.ttf"
            />

        </androidx.cardview.widget.CardView>

        <View android:layout_width="14.4dp" android:layout_height="match_parent"/>

        <androidx.cardview.widget.CardView
                android:id="@+id/fragment_immunisation_card_cv_update"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="0.5"
                app:cardCornerRadius="4dp"
                app:cardElevation="5dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/update"
                    android:textColor="@color/dark_blue"
                    android:background="@drawable/button_white_blue_stroke_selector"
                    fontPath="fonts/NunitoSans-Bold.ttf"
            />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</FrameLayout>